# ow2stats

./: .gitignore  CLAUDE.md  README.md  config.json  docker-compose.yml  quick.py  scrape.py
.github/workflows/: publish-backend.yml  publish-scrape.yml
backend/: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
backend/migrations/: 001_create_hero_stats.sql
backend/src/: config.rs  error.rs  main.rs  routes.rs
backend/src/database/: mod.rs  models.rs
backend/src/handlers/: heroes.rs  mod.rs  status.rs
scrape/: .gitignore  Dockerfile  client.py  config.json  config.py  models.py  pyproject.toml  quick.py  scrape.py  test_scrape.py  test_scraper.py
scrape/src/: client.py  main.py  models.py  scrape.py  test_scrape.py
