[project]
name = "scrape"
version = "0.1.0"
description = "Scrape overwatch hero stats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.12.0",
    "ruff>=0.12.10",
]
